--- a/testingpage/index.html
+++ b/testingpage/index.html
@@ -35,13 +35,12 @@
     
     <!-- Inline styles for mobile tweaks and dropdown adjustments -->
     <style>
-      /* Responsive Twitter timeline */
+      /* Responsive Twitter timeline and mobile social links */
       @media screen and (max-width: 800px) {
         .twitter-timeline {
           width: 100% !important;
           max-width: 100% !important;
         }
-        /* Stack social links vertically */
         header.page-header .social-links {
           flex-direction: column;
           align-items: center;
@@ -49,7 +48,7 @@
         header.page-header .social-links a.email-link {
           margin-top: 0.5rem;
         }
-        /* Ensure dropdown toggle uses same font size & bold as "Home" */
+        /* Ensure dropdown toggle uses same font size and bold as "Home" */
         nav .dropdown .dropdown-toggle {
           font-size: 1.4rem;
           font-weight: bold;
@@ -69,7 +68,7 @@
         font-weight: bold;
         transition: color 0.15s;
       }
-      /* Down arrow is added in the HTML (▼) */
+      /* Down arrow added in the HTML */
       nav .dropdown .dropdown-menu {
         display: none;
         position: absolute;
@@ -84,7 +83,7 @@
         font-size: 1.4rem;
         transition: background 0.15s, color 0.15s;
       }
-      /* On hover, use yellow background with grey text */
+      /* On hover: yellow background with grey text */
       nav .dropdown .dropdown-menu a:hover {
         background-color: #f0cb78;
         color: #4a4a4a;
@@ -94,7 +93,7 @@
         display: block;
       }
       
-      /* Always show social links on all devices */
+      /* Always show social links */
       header.page-header .social-links {
         display: flex !important;
       }
@@ -125,7 +124,7 @@
             <nav>
               <a href="https://mirrasets.com/" target="_self" style="font-weight:bold;">Home</a>
               <div class="dropdown">
-                <!-- Dropdown toggle with same font size and bold; arrow added -->
+                <!-- Dropdown toggle with down arrow -->
                 <a href="#" class="dropdown-toggle">Our Mirrored Assets &#9662;</a>
                 <div class="dropdown-menu">
                   <a href="https://mirrasets.com/gbpc/" target="_self">GBPC</a>
@@ -144,13 +143,11 @@
                 <path d="M15.6747 1.48975C15.0918 1.74239 14.4707 1.90986 13.8232 1.99117C14.4893 1.59816 14.9978 0.98058 15.2368 0.236191C14.6157 0.602093 13.9299 0.860548 13.1991 1.00478C12.6093 0.384294 11.7688 0 10.8518 0C9.07273 0 7.64046 1.42683 7.64046 3.17599C7.64046 3.42767 7.66201 3.66967 7.71491 3.90005C5.04335 3.77131 2.6794 2.50614 1.09135 0.578862C0.814107 1.05415 0.651481 1.59816 0.651481 2.1838C0.651481 3.28344 1.22459 4.25821 2.07886 4.82255C1.56258 4.81287 1.05609 4.66477 0.62699 4.43148C0.62699 4.44116 0.62699 4.45375 0.62699 4.46633C0.62699 6.00932 1.74088 7.29094 3.20157 7.58618C2.93999 7.65685 2.65491 7.69073 2.35905 7.69073C2.15332 7.69073 1.94563 7.67911 1.75067 7.63652C2.16703 8.89394 3.34852 9.81838 4.75337 9.84839C3.66005 10.6934 2.27186 11.2026 0.769042 11.2026C0.50551 11.2026 0.252755 11.191 0 11.1591C1.42346 12.0661 3.11046 12.5839 4.92971 12.5839C10.843 12.5839 14.0759 7.74397 14.0759 3.54867C14.0759 3.40831 14.071 3.27279 14.0642 3.13824C14.7019 2.69103 15.2378 2.13249 15.6747 1.48975Z" fill="#f0cb78"/>
               </svg>
             </a>
-            <!-- Replace "Stay in touch" with an email link using envelope icon -->
             <a class="email-link" href="mailto:support@mirrasets.com">
               <svg width="16" height="13" viewBox="0 0 16 13" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M1 2.5h14a.5.5 0 01.5.5v7a.5.5 0 01-.5.5H1a.5.5 0 01-.5-.5v-7a.5.5 0 01.5-.5z" stroke="#f0cb78" fill="none"/>
                 <path d="M1 2.5l7 5 7-5" stroke="#f0cb78" fill="none"/>
               </svg>
-              <span>Email us</span>
             </a>
           </div>
         </div>
