--- a/testingpage/index.html
+++ b/testingpage/index.html
@@ -148,13 +148,13 @@
                 <path d="M1 3l9 7 9-7" stroke="#f0cb78" stroke-width="2" fill="none"/>
               </svg> -->
               <!-- 
-              Option 2: -->
+              Option 2:
               <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M2 4h16a2 2 0 012 2v4a2 2 0 01-2 2H2a2 2 0 01-2-2V6a2 2 0 012-2z" stroke="#f0cb78" stroke-width="2" fill="none"/>
                 <path d="M2 4l8 6 8-6" stroke="#f0cb78" stroke-width="2" fill="none"/>
               </svg>
-              <!-- 
               Option 3 (filled style):
+-->
               <svg width="20" height="16" viewBox="0 0 20 16" fill="#f0cb78" xmlns="http://www.w3.org/2000/svg">
                 <path d="M1 4h18v8H1V4z" stroke="#f0cb78" stroke-width="2"/>
                 <path d="M1 4l9 6 9-6" stroke="#ffffff" stroke-width="2"/>
