--- a/testingpage/index.html
+++ b/testingpage/index.html
@@ -48,9 +48,9 @@
         header.page-header .social-links a.email-link {
           margin-top: 0.5rem;
         }
-        /* Hide the dropdown on mobile */
+        /* Hide the dropdown on mobile using !important */
         nav .dropdown {
-          display: none;
+          display: none !important;
         }
       }
       
@@ -142,24 +142,11 @@
               </svg>
             </a>
             <a class="email-link" href="mailto:support@mirrasets.com">
-              <!-- Option 1: Simple envelope icon (active)
-              <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <rect x="1" y="3" width="18" height="10" rx="2" stroke="#f0cb78" stroke-width="2" fill="none"/>
-                <path d="M1 3l9 7 9-7" stroke="#f0cb78" stroke-width="2" fill="none"/>
-              </svg> -->
-              <!-- 
-              Option 2:
+              <!-- Email Icon Option 2 -->
               <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M2 4h16a2 2 0 012 2v4a2 2 0 01-2 2H2a2 2 0 01-2-2V6a2 2 0 012-2z" stroke="#f0cb78" stroke-width="2" fill="none"/>
                 <path d="M2 4l8 6 8-6" stroke="#f0cb78" stroke-width="2" fill="none"/>
               </svg>
-              Option 3 (filled style):
--->
-              <svg width="20" height="16" viewBox="0 0 20 16" fill="#f0cb78" xmlns="http://www.w3.org/2000/svg">
-                <path d="M1 4h18v8H1V4z" stroke="#f0cb78" stroke-width="2"/>
-                <path d="M1 4l9 6 9-6" stroke="#ffffff" stroke-width="2"/>
-              </svg>
-              -->
             </a>
           </div>
         </div>
