--- a/testingpage/index.html
+++ b/testingpage/index.html
@@ -143,10 +143,9 @@
               </svg>
             </a>
             <a class="email-link" href="mailto:support@mirrasets.com">
-              <!-- Email Icon Option 2 -->
-              <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M2 4h16a2 2 0 012 2v4a2 2 0 01-2 2H2a2 2 0 01-2-2V6a2 2 0 012-2z" stroke="#f0cb78" stroke-width="2" fill="none"/>
-                <path d="M2 4l8 6 8-6" stroke="#f0cb78" stroke-width="2" fill="none"/>
+              <!-- New Email Icon Option 2 updated with provided SVG and our yellow fill -->
+              <svg width="16" height="11" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M10.81 5.323l5.143 3.251v-6.64l-5.143 3.39zM.7 1.935v6.64l5.142-3.252L.7 1.935zM15 0H1.65a.942.942 0 00-.924.811l7.599 5.007L15.925.811A.942.942 0 0015 0zM9.944 5.894l-1.35.888a.476.476 0 01-.524 0l-1.349-.89L.735 9.68a.94.94 0 00.923.804h13.349a.94.94 0 00.923-.804L9.944 5.894z" fill="#f0cb78"></path>
               </svg>
             </a>
           </div>
