--- a/testingpage/index.html
+++ b/testingpage/index.html
@@ -136,14 +136,20 @@
           </div>
 
           <div class="social-links">
-            <a href="https://twitter.com/mirrasets" target="_blank">
-              <!-- New Twitter Icon Option 2 with our yellow -->
+            <!-- Updated Twitter link (now X) with new icon -->
+            <a href="https://x.com/mirrasets" target="_blank">
               <svg width="14" height="14" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M8.333 5.929L13.546 0H12.31L7.783 5.147 4.17 0H0l5.466 7.784L0 14h1.235l4.778-5.436L9.831 14H14M1.68.911h1.897l8.733 12.223h-1.897" fill="#f0cb78"/>
               </svg>
             </a>
+            <!-- New Discord link -->
+            <a class="discord-link" href="https://discord.gg/DjBhVqmwup" target="_blank">
+              <svg width="18" height="12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M15.643 1.449S14.353.183 11.425 0v.4s1.606-.087 3.594 1.727C13.52 1.127 11.378.499 9 .499s-4.519.627-6.02 1.628C4.97.313 6.576.4 6.576.4V0C3.647.183 2.357 1.449 2.357 1.449.126 4.112 0 9.939 0 9.939c2.102 2.348 4.743 2.049 4.743 2.049l.97-1.299c-1.251-.314-2.145-1.034-2.682-1.594 1.498.98 3.618 1.594 5.969 1.594 2.351 0 4.47-.613 5.969-1.594-.537.56-1.43 1.28-2.682 1.594l.97 1.299s2.641.3 4.743-2.048c0 0-.126-5.828-2.357-8.491zM6.198 8.29A1.515 1.515 0 014.67 6.788c0-.83.683-1.504 1.527-1.504.843 0 1.527.673 1.527 1.504 0 .83-.684 1.503-1.527 1.503zm5.604 0a1.515 1.515 0 01-1.527-1.503c0-.83.684-1.504 1.527-1.504.844 0 1.527.673 1.527 1.504 0 .83-.683 1.503-1.527 1.503z" fill="#f0cb78"/>
+              </svg>
+            </a>
+            <!-- Existing Email link -->
             <a class="email-link" href="mailto:support@mirrasets.com">
-              <!-- New Email Icon Option 2 updated with provided SVG and our yellow fill -->
               <svg width="16" height="11" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M10.81 5.323l5.143 3.251v-6.64l-5.143 3.39zM.7 1.935v6.64l5.142-3.252L.7 1.935zM15 0H1.65a.942.942 0 00-.924.811l7.599 5.007L15.925.811A.942.942 0 0015 0zM9.944 5.894l-1.35.888a.476.476 0 01-.524 0l-1.349-.89L.735 9.68a.94.94 0 00.923.804h13.349a.94.94 0 00.923-.804L9.944 5.894z" fill="#f0cb78"></path>
               </svg>
