--- a/testingpage2/index.html
+++ b/testingpage2/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Real world assets, mirrored on Stellar | Mirrasets</title>
     <base href="" />
-    <link rel="icon" type="image/png" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="canonical" href="/" />
     <meta property="og:site_name" content="Mirrasets" />
     <meta property="og:title" content="Real world assets, mirrored on Stellar" />
