--- a/testingpage/index.html
+++ b/testingpage/index.html
@@ -96,7 +96,7 @@
         </div>
       </header>
       
-      <!-- Hero Section (using the GBPC image for now) -->
+      <!-- Hero Section -->
       <section class="hero">
         <div class="hero-image">
           <img src="https://mirrasets.com/images/gbpc-hero.jpg" alt="GBPC Banner" />
