--- a/testingpage2/index.html
+++ b/testingpage2/index.html
@@ -104,10 +104,11 @@
         <!-- Main content specific to GBPC can be placed here -->
       </section>
 
-       <!-- Global Last Updated Section -->
-      <section class="last-updated">
+      <!-- Last Updated Stats Section -->
+      <section class="current-stats" id="last-updated">
         <div class="centered-block">
-          <h3>Last Updated: May 8, 2024</h3>
+          <div class="count">Last Updated</div>
+          <div class="description">23/03/2025</div>
         </div>
       </section>
       
