--- a/testingpage2/index.html
+++ b/testingpage2/index.html
@@ -113,25 +113,37 @@
       </section>
       
       <!-- GBPC Stats Section -->
-      <section class="current-stats" id="gbpc-stats">
-        <div class="centered-block">
-          <div class="title">GBPC Stats</div>
-          <div class="table">
-            <div>
-              <div class="count">£0</div>
-              <div class="description">Circulating GBPC</div>
-            </div>
-            <div>
-              <div class="count">£61,981</div>
-              <div class="description">GBPC Buyback Ability</div>
-            </div>
-            <div>
-              <div class="count">$78,135</div>
-              <div class="description">USD Reserves</div>
-            </div>
-          </div>
-        </div>
-      </section>
+<section class="current-stats" id="gbpc-stats">
+  <div class="centered-block">
+    <div class="title">GBPC Stats</div>
+    <div class="table">
+      <div>
+        <div class="count">Exchange Rate</div>
+        <div class="description">Exchange Rate</div>
+      </div>
+      <div>
+        <div class="count">Circulating GBPC</div>
+        <div class="description">Circulating GBPC</div>
+      </div>
+      <div>
+        <div class="count">USD Reserves</div>
+        <div class="description">USD Reserves</div>
+      </div>
+      <div>
+        <div class="count">GBPC Buyback Ability</div>
+        <div class="description">GBPC Buyback Ability</div>
+      </div>
+      <div>
+        <div class="count">Collateralization Ratio</div>
+        <div class="description">Collateralization Ratio</div>
+      </div>
+      <div>
+        <div class="count">Spare</div>
+        <div class="description">Spare</div>
+      </div>
+    </div>
+  </div>
+</section>
       
       <!-- EURC Stats Section -->
       <section class="current-stats" id="eurc-stats">
