--- a/testingpage2/index.html
+++ b/testingpage2/index.html
@@ -118,28 +118,28 @@
     <div class="title">GBPC Stats</div>
     <div class="table">
       <div>
-        <div class="count">Exchange Rate</div>
+        <div class="count">0.00</div>
         <div class="description">Exchange Rate</div>
       </div>
       <div>
-        <div class="count">Circulating GBPC</div>
+        <div class="count">£0</div>
         <div class="description">Circulating GBPC</div>
       </div>
       <div>
-        <div class="count">USD Reserves</div>
+        <div class="count">$0</div>
         <div class="description">USD Reserves</div>
       </div>
       <div>
-        <div class="count">GBPC Buyback Ability</div>
+        <div class="count">£0</div>
         <div class="description">GBPC Buyback Ability</div>
       </div>
       <div>
-        <div class="count">Collateralization Ratio</div>
-        <div class="description">Collateralization Ratio</div>
+        <div class="count">$0</div>
+        <div class="description">USD +/-</div>
       </div>
       <div>
-        <div class="count">Spare</div>
-        <div class="description">Spare</div>
+        <div class="count">0%</div>
+        <div class="description">Collateralization Ratio</div>
       </div>
     </div>
   </div>
