--- a/testingpage2/index.html
+++ b/testingpage2/index.html
@@ -95,6 +95,11 @@
           </div>
         </div>
       </header>
+
+            <!-- Main Block for GBPC -->
+      <section class="main-block-gbpc">
+        <!-- Main content specific to GBPC can be placed here -->
+      </section>
       
       <!-- Last Updated Stats Section -->
       <section class="current-stats" id="last-updated">
@@ -198,6 +203,27 @@
             <div>
               <div class="count">0%</div>
               <div class="description">Collateralization Ratio</div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+       <!-- AQUA Stats Section (No circulating calculation) -->
+      <section class="current-stats" id="aqua-stats">
+        <div class="centered-block">
+          <div class="title">AQUA Stats</div>
+          <div class="table">
+            <div>
+              <div class="count">♒︎ 45,000,000</div>
+              <div class="description">AQUA Liquid Reserve</div>
+            </div>
+            <div>
+              <div class="count">$35,100</div>
+              <div class="description">Liquid AQUA USD Value</div>
+            </div>
+            <div>
+              <div class="count">♒︎ 214,500,000</div>
+              <div class="description">AQUA locked in ICE</div>
             </div>
           </div>
         </div>
