--- a/testingpage2/index.html
+++ b/testingpage2/index.html
@@ -47,9 +47,10 @@
   </head>
   <body>
     <div class="main-content" id="main-content">
-      <!-- Header -->
+      <!-- Updated Header -->
       <header class="page-header">
         <a class="main-link" href="/"><img src="/icons/sauk-logo.png" alt="Mirrasets Logo" /></a>
+
         <div class="menu-toggle">
           <svg class="menu-icon" width="15" height="8" viewBox="0 0 15 8" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M2 1H15" stroke="#4a4a4a" />
@@ -60,6 +61,7 @@
             <path d="M11.6055 11.6064L0.998867 0.999844" stroke="#4a4a4a" />
           </svg>
         </div>
+
         <div class="menu">
           <div class="relative">
             <nav>
@@ -70,13 +72,13 @@
                   <a href="https://mirrasets.com/gbpc/" target="_self">GBPC</a>
                   <a href="https://mirrasets.com/eurc/" target="_self">EURC</a>
                   <a href="https://mirrasets.com/krwc/" target="_self">KRWC</a>
-                  <a href="https://mirrasets.com/usdc/" target="_self">USDC</a>
                 </div>
               </div>
               <a href="https://vote.aqua.network/?base=GBPC:GDXF6SYWIQOKOZ7BACXHBFBLQZEIH25KOTTLWQK35GO3JKRNIFHHGBPC/" target="_blank" style="font-weight:bold;">AQUA Voting</a>
               <a href="https://aqua.network/rewards/" target="_blank" style="font-weight:bold;">AQUA Rewards</a>
             </nav>
           </div>
+
           <div class="social-links">
             <a href="https://x.com/mirrasets" target="_blank">
               <svg width="14" height="14" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -90,16 +92,16 @@
             </a>
             <a class="email-link" href="mailto:support@mirrasets.com">
               <svg width="16" height="11" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M10.81 5.323l5.143 3.251v-6.64l-5.143 3.39zM.7 1.935v6.64l5.142-3.252L.7 1.935zM15 0H1.65a.942.942 0 00-.924.811l7.599 5.007L15.925.811A.942.942 0 0015 0zM9.944 5.894l-1.35.888a.476.476 0 01-.524 0l-1.349-.89L.735 9.68a.94.94 0 00.923.804h13.349a.94.942 0 00.923-.804L9.944 5.894z" fill="#f0cb78"/>
+                <path d="M10.81 5.323l5.143 3.251v-6.64l-5.143 3.39zM.7 1.935v6.64l5.142-3.252L.7 1.935zM15 0H1.65a.942.942 0 00-.924.811l7.599 5.007L15.925.811A.942.942 0 0015 0zM9.944 5.894l-1.35.888a.476.476 0 01-.524 0l-1.349-.89L.735 9.68a.94.94 0 00.923.804h13.349a.94.94 0 00.923-.804L9.944 5.894z" fill="#f0cb78"/>
               </svg>
             </a>
           </div>
         </div>
       </header>
-      
-      <!-- Main Block for USDC (optional content) -->
-      <section class="main-block-usdc">
-        <!-- Content specific to USDC can be placed here -->
+
+      <!-- Main Block for GBPC -->
+      <section class="main-block-gbpc">
+        <!-- Main content specific to GBPC can be placed here -->
       </section>
       
       <!-- Last Updated Stats Section -->
