--- a/testingpage2/index.html
+++ b/testingpage2/index.html
@@ -243,6 +243,39 @@
           </div>
         </div>
       </section>
+
+      <!-- AQUAm25 Stats Section -->
+<section class="current-stats" id="aquam25-stats">
+  <div class="centered-block">
+    <div class="title">AQUAm25 Stats</div>
+    <div class="table">
+      <div>
+        <div class="count">0.00</div>
+        <div class="description">Exchange Rate</div>
+      </div>
+      <div>
+        <div class="count">♒︎0</div>
+        <div class="description">Circulating AQUAm25</div>
+      </div>
+      <div>
+        <div class="count">AQUA 0</div>
+        <div class="description">AQUA Reserves</div>
+      </div>
+      <div>
+        <div class="count">♒︎0</div>
+        <div class="description">AQUAm25 Buyback Ability</div>
+      </div>
+      <div>
+        <div class="count">0</div>
+        <div class="description">Net AQUA Reserves</div>
+      </div>
+      <div>
+        <div class="count">0%</div>
+        <div class="description">Collateralization Ratio</div>
+      </div>
+    </div>
+  </div>
+</section>
       
       <!-- AQUA Stats Section (unchanged) -->
       <section class="current-stats" id="aqua-stats">
