--- a/eurc/index.html
+++ b/eurc/index.html
@@ -218,16 +218,7 @@
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
     <script src="https://mirrasets.com/scripts/info.js"></script>
     <!-- Inline Script: Toggle Mobile Menu -->
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const menuToggle = document.querySelector('.menu-toggle');
-        const header = document.querySelector('header.page-header');
-        if (menuToggle && header) {
-          menuToggle.addEventListener('click', function() {
-            header.classList.toggle('menu-opened');
-          });
-        }
-      });
-    </script>
+    <script src="https://mirrasets.com/scripts/mobile-menu.js"></script>
+
   </body>
 </html>
