--- a/testingpage/index.html
+++ b/testingpage/index.html
@@ -108,7 +108,7 @@
       <section class="current-stats" id="last-updated">
         <div class="centered-block">
           <div class="count">Last Updated</div>
-          <div class="description">00/00/0000</div>
+          <div class="description">00/00/0000 00:00</div>
         </div>
       </section>
       
@@ -254,7 +254,7 @@
               <div class="description">Exchange Rate</div>
             </div>
             <div>
-              <div class="count">♒︎0</div>
+              <div class="count">♒︎ 0</div>
               <div class="description">Circulating AQUAm25</div>
             </div>
             <div>
@@ -262,7 +262,7 @@
               <div class="description">AQUA Reserves</div>
             </div>
             <div>
-              <div class="count">♒︎0</div>
+              <div class="count">♒︎ 0</div>
               <div class="description">AQUAm25 Buyback Ability</div>
             </div>
             <div>
