--- a/testingpage2/index.html
+++ b/testingpage2/index.html
@@ -313,5 +313,6 @@
     <script src="https://mirrasets.com/scripts/info.js"></script>
     <!-- External Stats Script -->
     <script src="https://mirrasets.com/scripts/stats.js"></script>
+    <script src="https://mirrasets.com/scripts/mobile-menu.js"></script>
   </body>
 </html>
