--- a/testingpage2/index.html
+++ b/testingpage2/index.html
@@ -67,7 +67,7 @@
             <nav>
               <a href="https://mirrasets.com/" target="_self" style="font-weight:bold;">Home</a>
               <div class="dropdown">
-                <a href="#" class="dropdown-toggle">Our Assets &#9662;</a>
+                <a href="#" class="dropdown-toggle">Our Assets &#x25BC;</a>
                 <div class="dropdown-menu">
                   <a href="https://mirrasets.com/gbpc/" target="_self">GBPC</a>
                   <a href="https://mirrasets.com/eurc/" target="_self">EURC</a>
