--- a/testingpage/index.html
+++ b/testingpage/index.html
@@ -258,7 +258,7 @@
               <div class="description">Circulating AQUAm25</div>
             </div>
             <div>
-              <div class="count">AQUA 0</div>
+              <div class="count">♒︎ 0</div>
               <div class="description">AQUA Reserves</div>
             </div>
             <div>
@@ -266,7 +266,7 @@
               <div class="description">AQUAm25 Buyback Ability</div>
             </div>
             <div>
-              <div class="count">0</div>
+              <div class="count">♒︎ 0</div>
               <div class="description">Net AQUA Reserves</div>
             </div>
             <div>
