--- a/testingpage/index.html
+++ b/testingpage/index.html
@@ -280,7 +280,7 @@
       <!-- AQUA Stats Section (unchanged) -->
       <section class="current-stats" id="aqua-stats">
         <div class="centered-block">
-          <div class="title">AQUA Stats</div>
+          <div class="title">Additional AQUA Reserves</div>
           <div class="table">
             <div>
               <div class="count">♒︎ 45,000,000</div>
