--- a/testingpage/index.html
+++ b/testingpage/index.html
@@ -100,7 +100,7 @@
       </header>
 
       <!-- Main Block for GBPC -->
-      <section class="main-block-gbpc">
+      <section class="main-block-reserves">
         <!-- Main content specific to GBPC can be placed here -->
       </section>
       
